fixed layout issues

--- a/stile/style.css
+++ b/stile/style.css
@@ -51,6 +51,5 @@ section {
 /* col */
 [class^="col"] {
     border: 1px dashed blue;
-    height: 100%;
 }
 
